# PortScanner

./: .gitignore  CMakeLists.txt  Headers.h  main.cpp  vcpkg.json
LocalMachine/: LocalMachine.cpp  LocalMachine.h
PortScanner/: CMakeLists.txt  IPOperations.cpp  IPOperations.h  LocalMachine.cpp  LocalMachine.h  main.cpp
SubnetScan/: SubnetScanner.cpp  SubnetScanner.h
